fix bootstrap grid

--- a/puifinal/main.html
+++ b/puifinal/main.html
@@ -57,15 +57,11 @@
     <!-- header text + typed.js grid -->
     <div class="container-fluid mainGrid">
       <div class="row">
-        <div class="col-sm">
-        </div>
-        <div class="col-sm">
+        <div class="col-lg">
           <!-- header question -->
           <div class="mainQuestion">
           What's on the menu?
           </div>
-        </div>
-        <div class="col-sm">
         </div>
       </div>
       <div class="row">
